Add widget row for altimeter height

--- a/src/ui/ualberta/UAlbertaControlWidget.ui
+++ b/src/ui/ualberta/UAlbertaControlWidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>501</width>
-    <height>788</height>
+    <width>635</width>
+    <height>1292</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -357,9 +357,37 @@
          <number>2</number>
         </property>
         <item>
-         <layout class="QGridLayout" name="gridLayout_3" columnstretch="0,1,0" columnminimumwidth="0,0,0">
+         <layout class="QGridLayout" name="gridLayout_3" columnstretch="0,1,0">
           <item row="4" column="1">
            <widget class="QLabel" name="nav_euler_label">
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="0" alignment="Qt::AlignRight">
+           <widget class="QLabel" name="label_13">
+            <property name="text">
+             <string>Nav Filter Message:</string>
+            </property>
+           </widget>
+          </item>
+          <item row="11" column="1">
+           <widget class="QLabel" name="collective_pitch_label">
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="2">
+           <widget class="QPushButton" name="reset_filter_button">
+            <property name="text">
+             <string>Reset Filter</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="1">
+           <widget class="QLabel" name="gx3_message_label">
             <property name="text">
              <string/>
             </property>
@@ -369,6 +397,20 @@
            <widget class="QLabel" name="label_4">
             <property name="text">
              <string>AHRS Euler (deg):</string>
+            </property>
+           </widget>
+          </item>
+          <item row="9" column="1">
+           <widget class="QLabel" name="position_reference_label">
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="1">
+           <widget class="QLabel" name="gx3_state_label">
+            <property name="text">
+             <string/>
             </property>
            </widget>
           </item>
@@ -385,71 +427,8 @@
             </property>
            </widget>
           </item>
-          <item row="2" column="1">
-           <widget class="QLabel" name="gx3_state_label">
-            <property name="text">
-             <string/>
-            </property>
-           </widget>
-          </item>
-          <item row="3" column="0" alignment="Qt::AlignRight">
-           <widget class="QLabel" name="label_13">
-            <property name="text">
-             <string>Nav Filter Message:</string>
-            </property>
-           </widget>
-          </item>
-          <item row="3" column="1">
-           <widget class="QLabel" name="gx3_message_label">
-            <property name="text">
-             <string/>
-            </property>
-           </widget>
-          </item>
-          <item row="4" column="0" alignment="Qt::AlignRight">
-           <widget class="QLabel" name="label_14">
-            <property name="text">
-             <string>Nav Euler (deg):</string>
-            </property>
-           </widget>
-          </item>
-          <item row="5" column="0" alignment="Qt::AlignRight">
-           <widget class="QLabel" name="label_7">
-            <property name="text">
-             <string>LLH Position:</string>
-            </property>
-           </widget>
-          </item>
-          <item row="5" column="1">
-           <widget class="QLabel" name="llh_position_label">
-            <property name="text">
-             <string/>
-            </property>
-           </widget>
-          </item>
-          <item row="6" column="0" alignment="Qt::AlignRight">
-           <widget class="QLabel" name="label_9">
-            <property name="text">
-             <string>NED Position:</string>
-            </property>
-           </widget>
-          </item>
-          <item row="6" column="1">
-           <widget class="QLabel" name="ned_position_label">
-            <property name="text">
-             <string/>
-            </property>
-           </widget>
-          </item>
-          <item row="7" column="0" alignment="Qt::AlignRight">
-           <widget class="QLabel" name="label_10">
-            <property name="text">
-             <string>NED Velocity:</string>
-            </property>
-           </widget>
-          </item>
-          <item row="7" column="1">
-           <widget class="QLabel" name="ned_velocity_label">
+          <item row="8" column="1">
+           <widget class="QLabel" name="ned_origin_label">
             <property name="text">
              <string/>
             </property>
@@ -462,10 +441,45 @@
             </property>
            </widget>
           </item>
-          <item row="8" column="1">
-           <widget class="QLabel" name="ned_origin_label">
+          <item row="7" column="1">
+           <widget class="QLabel" name="ned_velocity_label">
             <property name="text">
              <string/>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="0" alignment="Qt::AlignRight">
+           <widget class="QLabel" name="label_14">
+            <property name="text">
+             <string>Nav Euler (deg):</string>
+            </property>
+           </widget>
+          </item>
+          <item row="5" column="1">
+           <widget class="QLabel" name="llh_position_label">
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
+          </item>
+          <item row="5" column="0" alignment="Qt::AlignRight">
+           <widget class="QLabel" name="label_7">
+            <property name="text">
+             <string>LLH Position:</string>
+            </property>
+           </widget>
+          </item>
+          <item row="9" column="0" alignment="Qt::AlignRight">
+           <widget class="QLabel" name="label_19">
+            <property name="text">
+             <string>Position Setpoint (NED)</string>
+            </property>
+           </widget>
+          </item>
+          <item row="8" column="2">
+           <widget class="QPushButton" name="ned_origin_button">
+            <property name="text">
+             <string>Set Origin</string>
             </property>
            </widget>
           </item>
@@ -483,38 +497,41 @@
             </property>
            </widget>
           </item>
-          <item row="11" column="1">
-           <widget class="QLabel" name="collective_pitch_label">
+          <item row="7" column="0" alignment="Qt::AlignRight">
+           <widget class="QLabel" name="label_10">
+            <property name="text">
+             <string>NED Velocity:</string>
+            </property>
+           </widget>
+          </item>
+          <item row="6" column="1">
+           <widget class="QLabel" name="ned_position_label">
             <property name="text">
              <string/>
             </property>
            </widget>
           </item>
-          <item row="9" column="0" alignment="Qt::AlignRight">
-           <widget class="QLabel" name="label_19">
+          <item row="6" column="0" alignment="Qt::AlignRight">
+           <widget class="QLabel" name="label_9">
             <property name="text">
-             <string>Position Setpoint (NED)</string>
+             <string>NED Position:</string>
             </property>
            </widget>
           </item>
-          <item row="9" column="1">
-           <widget class="QLabel" name="position_reference_label">
+          <item row="12" column="0">
+           <widget class="QLabel" name="label_21">
+            <property name="text">
+             <string>Alitimeter Height (m):</string>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignCenter</set>
+            </property>
+           </widget>
+          </item>
+          <item row="12" column="1">
+           <widget class="QLabel" name="altimeter_height_label">
             <property name="text">
              <string/>
-            </property>
-           </widget>
-          </item>
-          <item row="8" column="2">
-           <widget class="QPushButton" name="ned_origin_button">
-            <property name="text">
-             <string>Set Origin</string>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="2">
-           <widget class="QPushButton" name="reset_filter_button">
-            <property name="text">
-             <string>Reset Filter</string>
             </property>
            </widget>
           </item>
@@ -690,19 +707,6 @@
         </widget>
        </item>
       </layout>
-     </item>
-     <item>
-      <spacer name="verticalSpacer_2">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>40</height>
-        </size>
-       </property>
-      </spacer>
      </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout">
