Added plots for several other variables in the interface, renamed 'set attitude from ahrs' to init, which it actually does

--- a/src/ui/ualberta/UAlbertaControlWidget.ui
+++ b/src/ui/ualberta/UAlbertaControlWidget.ui
@@ -50,16 +50,6 @@
         </property>
         <item>
          <layout class="QGridLayout" name="gridLayout_6" columnstretch="0,0,0,0">
-          <item row="1" column="0" alignment="Qt::AlignRight">
-           <widget class="QLabel" name="label_15">
-            <property name="toolTip">
-             <string>Avionics battery level</string>
-            </property>
-            <property name="text">
-             <string>Avionics Bat:</string>
-            </property>
-           </widget>
-          </item>
           <item row="0" column="0" alignment="Qt::AlignRight">
            <widget class="QLabel" name="label_8">
             <property name="text">
@@ -88,6 +78,13 @@
             </property>
            </widget>
           </item>
+          <item row="1" column="3">
+           <widget class="QLabel" name="receiver_bat_label">
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
+          </item>
           <item row="1" column="1">
            <widget class="QLabel" name="avionics_bat_label">
             <property name="text">
@@ -105,10 +102,13 @@
             </property>
            </widget>
           </item>
-          <item row="1" column="3">
-           <widget class="QLabel" name="receiver_bat_label">
+          <item row="1" column="0">
+           <widget class="QLabel" name="label_15">
+            <property name="toolTip">
+             <string>Avionics battery level</string>
+            </property>
             <property name="text">
-             <string/>
+             <string>Avionics Bat:</string>
             </property>
            </widget>
           </item>
@@ -379,13 +379,6 @@
             </property>
            </widget>
           </item>
-          <item row="2" column="2">
-           <widget class="QPushButton" name="reset_filter_button">
-            <property name="text">
-             <string>Reset Filter</string>
-            </property>
-           </widget>
-          </item>
           <item row="3" column="1">
            <widget class="QLabel" name="gx3_message_label">
             <property name="text">
@@ -535,6 +528,20 @@
             </property>
            </widget>
           </item>
+          <item row="2" column="2">
+           <widget class="QPushButton" name="set_attitude_button">
+            <property name="text">
+             <string>Init Filter</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="2">
+           <widget class="QPushButton" name="reset_filter_button">
+            <property name="text">
+             <string>Reset Filter</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </item>
        </layout>
@@ -675,16 +682,19 @@
       </layout>
      </item>
      <item>
-      <layout class="QGridLayout" name="gridLayout_4">
-       <item row="0" column="0">
-        <widget class="QPushButton" name="set_attitude_button">
+      <layout class="QHBoxLayout" name="horizontalLayout">
+       <item>
+        <widget class="QPushButton" name="setRefPos">
+         <property name="focusPolicy">
+          <enum>Qt::WheelFocus</enum>
+         </property>
          <property name="text">
-          <string>Set Nav Att from AHRS</string>
+          <string>Set Reference Position</string>
          </property>
         </widget>
        </item>
-       <item row="0" column="1">
-        <spacer name="horizontalSpacer_4">
+       <item>
+        <spacer name="horizontalSpacer_3">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
@@ -696,20 +706,6 @@
          </property>
         </spacer>
        </item>
-       <item row="0" column="2">
-        <widget class="QPushButton" name="setRefPos">
-         <property name="focusPolicy">
-          <enum>Qt::WheelFocus</enum>
-         </property>
-         <property name="text">
-          <string>Set Reference Position</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </item>
-     <item>
-      <layout class="QHBoxLayout" name="horizontalLayout">
        <item alignment="Qt::AlignHCenter">
         <widget class="QPushButton" name="shutdown_button">
          <property name="font">
